End of section 5

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings":{
     "DefaultConnection":"Data Source=dataingapp.db"
   },
+  "TokenKey":"super sicret ungessable key!!",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
